--- a/neceser.html
+++ b/neceser.html
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
+          <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,7 +53,7 @@
         </div>
       </nav>
     </header>
- 
+
     <section id="products" class="py-5 bg-light">
       <div class="container text-center">
         <div class="row align-items-center">
@@ -68,7 +68,7 @@
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.10.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$7000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -77,7 +77,7 @@
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.37.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$12000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$12000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$12000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$9000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.25.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$9000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -126,7 +126,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$9000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.30.jpeg"  class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$9000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$8000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.51 (1).jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$8000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
