--- a/portanotebook.html
+++ b/portanotebook.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
+          <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -67,7 +67,7 @@
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.09.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$15000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.09.52.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$16000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -85,7 +85,7 @@
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
                 <p class="card-text">$15000</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn card-button text-white">Ver más</a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$17000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$18000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.13.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$20000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$25000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.51.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$20000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -143,7 +143,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$25000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
             <p class="card-text">$9000</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="#" class="btn card-button text-white">Ver más</a>
           </div>
         </div>
       </div>
