--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
+        <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,7 +68,7 @@
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.09.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
                 <div class="card-body">
                   <p class="card-text">$25000</p>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <a href="#" class="btn card-button text-white">Ver más</a>
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.09.52.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
                 <div class="card-body">
                   <p class="card-text">$25000</p>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <a href="#" class="btn card-button text-white">Ver más</a>
                 </div>
               </div>
             </div>
@@ -86,7 +86,7 @@
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.11.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
                 <div class="card-body">
                   <p class="card-text">$25000</p>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <a href="#" class="btn card-button text-white">Ver más</a>
                 </div>
               </div>
             </div>
@@ -99,7 +99,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$23000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
           <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$7000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$25000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$25000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.37.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$25000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.48.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$13000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -171,7 +171,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -180,7 +180,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">13000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.53.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -198,7 +198,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$14000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -216,7 +216,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.01.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$14000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -225,7 +225,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.13.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -234,7 +234,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -243,7 +243,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.25.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -252,7 +252,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -261,7 +261,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.27.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$9000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.28.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$13000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.29.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$13000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -288,7 +288,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.30.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$13000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -297,7 +297,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -306,7 +306,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -315,7 +315,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$10000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -324,7 +324,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$10000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.40.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$10000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -342,7 +342,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$10000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -351,7 +351,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.51 (1).jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$25000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
@@ -360,7 +360,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.51.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$12000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div> <div class="col-md-4">
@@ -368,7 +368,7 @@
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
               <p class="card-text">$25000</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#" class="btn card-button text-white">Ver más</a>
             </div>
           </div>
         </div>
